--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Chase Application Status Viewer",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Unofficial tool to visualize Chase Credit Card application status for reconsideration.",
   "action": {
     "default_popup": "index.html",
@@ -9,7 +9,8 @@
   },
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "host_permissions": [
     "https://*.chase.com/*"
