feat: Configure for GitHub Pages and Chrome Extension deployment
Updates Vite configuration to set `base` to './' for proper asset loading in different deployment environments.

Adds a GitHub Actions workflow for deploying to GitHub Pages, triggered on `main` or `master` branch pushes, and manual dispatch. Includes steps for checkout, Node setup, installation, build, pages configuration, artifact upload, and deployment.

Modifies the existing release workflow:
- Renames to "Release Chrome Extension".
- Adds `workflow_dispatch` for manual builds.
- Adjusts Node setup to remove caching for potential lock file issues.
- Ensures `zip` command correctly archives the build output.
- Conditionally creates a GitHub release only for tag pushes.
- Adds artifact upload for manual runs.
- Updates `index.html` to use a relative path for the favicon. →

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,8 @@ name: Release Chrome Extension
 on:
   push:
     tags:
-      - 'v*' # Trigger on tags like v1.0.0, v0.0.1
+      - 'v*' # Trigger on tags like v1.0.0
+  workflow_dispatch: # Allows you to click a button to build manually
 
 permissions:
   contents: write
@@ -20,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          # Removed cache: 'npm' because it requires package-lock.json
+          # Cache setting removed to prevent "lock file not found" error
 
       - name: Install Dependencies
         run: npm install
@@ -31,13 +32,18 @@ jobs:
       - name: Zip Extension
         run: |
           cd dist
-          zip -r ../chase-status-viewer.zip ./*
-          cd ..
+          zip -r ../chase-status-viewer.zip .
 
       - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: chase-status-viewer.zip
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Upload Artifact (Manual Run)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/upload-artifact@v4
+        with:
+          name: chase-status-viewer-zip
+          path: chase-status-viewer.zip
