--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["chrome", "node"]
   },
-  "include": ["."]
+  "include": ["."],
+  "exclude": ["node_modules", "dist", "vite.config.ts"]
 }
