--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chase-status-viewer",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.260",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
