--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Chase Application Status Viewer",
-  "version": "0.0.1",
-  "description": "Unofficial tool to visualize Chase Credit Card application status for reconsideration.",
+  "version": "1.0.0",
+  "description": "Unofficial tool to visualize Chase Credit Card application status for reconsideration calls.",
   "action": {
     "default_popup": "index.html",
-    "default_title": "Check Chase Status"
+    "default_title": "Check Chase Status",
+    "default_icon": {
+      "16": "vite.svg",
+      "48": "vite.svg",
+      "128": "vite.svg"
+    }
   },
   "permissions": [
     "activeTab",
